# oreilly-epub

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Cargo.toml  README.md  parse-cookies.py
.github/workflows/: ci.yml
src/: epub.rs  http_client.rs  main.rs  models.rs  xml.rs
utils/: diff-epubs.sh
