[package]
name = "oreilly-epub"
version = "0.1.2"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
quick-xml = "0.39.2"
ogrim = "0.1.1"
relative-path = { version = "2.0.1", features = ["serde"] }
reqwest = { version = "0.13.2", features = ["cookies", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
url = { version = "2.5.8", features = ["serde"] }
zip = { version = "8.1.0", default-features = false, features = ["deflate"] }
directories = "6.0.0"
